--- a/components/Tablist.module.css
+++ b/components/Tablist.module.css
@@ -1,39 +1,35 @@
-.tabContainer {
-    display: flex;
-    overflow-x: auto;
-    position: relative;
-    border: 3px solid red   ;
-}
 
 .tabList {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #c8c8c8;
-    border-bottom: 1px solid #ccc;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    height: 30px;
-    display: flex;
-    align-items: center;
-    /* padding: 0 16px; */
-    z-index: 10;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #2c2c2c;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  height: 48px;
+  display: flex;
+  align-items: center;
+  /* padding: 0 16px; */
+  z-index: 10;
+}
 
 .tab {
-    user-select: none;
-    width: 30%;
-    font-size: 14px;
-    font-weight: 500;
-    color: #333;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    /* border-radius: 4px 4px 0 0; */
-    transition: background-color 0.2s, color 0.2s;
-    text-align: center;
+  max-width: 50%;
+  min-width: 145px;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+  background-color: #fff;
+  border-radius: 4px 4px 0 0;
+  transition: background-color 0.2s, color 0.2s;
+  text-align: center;
+  margin-right: 2px;
 }
+
+
 .tab:hover {
-    background-color: #e0e0e0;
+    background-color: #616161;
   }
   
 
@@ -46,7 +42,7 @@
 
 .tab.active {
     font-weight: bold;
-    color: blue;
-    border: 3px solid blue;
+    background: #545454;
+    color: white;
   }
   
