--- a/components/BurgerMenu.module.css
+++ b/components/BurgerMenu.module.css
@@ -3,12 +3,13 @@
   }
   
   .burgerButton {
-    padding: 8px;
+    /* padding: 8px; */
     border: none;
     background: #fff;
     cursor: pointer;
     border: 1px solid #ccc;
     border-radius: 4px;
+    width: 36px;
   }
   
   .burgerDropdown {
