--- a/components/Tablist.module.css
+++ b/components/Tablist.module.css
@@ -21,7 +21,6 @@
   font-weight: 500;
   color: #333;
   background-color: #fff;
-  border-radius: 4px 4px 0 0;
   transition: background-color 0.2s, color 0.2s;
   text-align: center;
   margin-right: 2px;
@@ -31,7 +30,7 @@
 
 
 .tab:hover {
-    background-color: #616161;
+    background-color: #bbbbbb;
   }
   
 
@@ -44,8 +43,8 @@
 
 .tab.active {
     font-weight: bold;
-    background: #545454;
-    color: white;
+    background: #F1F5F8;
+    border-top: 3px solid #4690E2;
   }
   
   .pinButton {
