fixed drag and drop but switching between tabs doesnt work anymore

--- a/components/Tablist.module.css
+++ b/components/Tablist.module.css
@@ -31,6 +31,10 @@
 
 .tab:hover {
     background-color: #bbbbbb;
+    /* -webkit-user-select: none; Safari */
+  /* -ms-user-select: none; IE 10 and IE 11 */
+  /* user-select: none; */
+  cursor:grab;
   }
   
 
